--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.16
+Date: 2022-11-29
+  Major Features:
+    - Alt-selecting by creepmeter allows player to prioritize areas of creep to clear (Alt-selecting is holding Shift and left mouse button while moving cursor). Multiplayer support. Each player can have only one priority zone (new replaces an old one, no creep selection removes old one).
+  Balancing:
+    - Rampant Arsenal healing and speed capsules require bio residue.
+  Bugfixes:
+    - Fixed incorrect tiles positions check vs structures and areas bounding boxes for creep excavation and corrosion work.
+    - Revenge strikes shouldn't place creep on surfaces other than nauvis anymore.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.15
 Date: 2022-11-20
   Minor Features:
