--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Date: 2023-01-07
     - Creep miners pollution decreased approx by 35% (via both - reduced setting value and diminished miners emissions values).
   Bugfixes:
     - Fixed incorrect tiles positions for creep generation mechanics in some cases.
+    - Creep Miner pollutions value startup setting name/description were incorrect since version 1.3.10.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.16
 Date: 2022-11-29
