--- a/changelog.txt
+++ b/changelog.txt
@@ -6,10 +6,10 @@ Date: 2023-01-07
     - Smarter creep generation for no New Enemies games. With or w/o Rampant. Makes worms and nests generate creep differently.
   Balancing:
     - Creep generation changed. Now should be balanced for any enemy bases difficulty. Worms give less biomass. Hives provide biomass abundance even with evolution growth.
-    - Creep miners pollution decreased approx by 35% (via both - reduced setting value and diminished miners emissions values).
+    - Creep miners pollution decreased approx by 35% (via both - reduced startup setting value and diminished miners emissions).
   Bugfixes:
     - Fixed incorrect tiles positions for creep generation mechanics in some cases.
-    - Creep Miner pollutions value startup setting name/description were incorrect since version 1.3.10.
+    - Creep Miner emissions startup setting had incorrect name/description since miner logics change in version 1.3.10.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.16
 Date: 2022-11-29
