--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.18
+Date: 2023-01-?
+  Balancing:
+    - Counter-strikes makes smaller creep areas
+    - Counter-strikes are less often, but can happen for killing worms and "remote kill" distance is reduced.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.17
 Date: 2023-01-07
   Major Features:
