--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Date: 2023-01-?
   Balancing:
     - Counter-strikes makes smaller creep areas
     - Counter-strikes are less often, but can happen for killing worms and "remote kill" distance is reduced.
+  Info:
+    - Removed redunant utility mod dependency
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.17
 Date: 2023-01-07
