--- a/changelog.txt
+++ b/changelog.txt
@@ -2,12 +2,16 @@
 Version: 1.3.18
 Date: 2023-01-?
   Major Features:
-    - New mechanism for corrosion event. Now all player's buildings will corrode in a more realistic manner - individually with smaller damage, but more often.
+    - New mechanism for corrosion event. Now all player's buildings will corrode in a more realistic manner - individually with flat damage.
       Less peak game resource consumption in case of many structures corrosion taking place.
-    - New mechanism for creep miners processing, making active ones more responsive, while reducing CPU time consumption by passive miners.
+    - New mechanism for creep miners processing, making active ones more responsive, while eliminating CPU time consumption by idling miners.
+    - Optimization for creep extraction to free up entire buildings first instead of proximity priority, also reduced CPU time for intense cases.
+      Priority zones of multiple players are not considered by the miner equally in terms of proximity anymore to reduce CPU time. Zone after zone now.
+      Priority zone contents is processed not by proximity to the miner criterion anymore (Was it important?).
+    - Faster creep deployment.
   Balancing:
     - Counter-strikes make smaller creep areas.
-    - Counter-strikes are less often, but can happen for killing worms and provoking "remote kill" distance is reduced.
+    - Counter-strikes are less often, but can happen for killing worms. Provoking "remote kill" distance is reduced.
   Info:
     - Removed redunant utility mod dependency.
 ---------------------------------------------------------------------------------------------------
@@ -26,7 +30,8 @@ Date: 2023-01-07
 Version: 1.3.16
 Date: 2022-11-29
   Major Features:
-    - Alt-selecting by creepmeter allows player to prioritize areas of creep to clear (Alt-selecting is holding Shift and left mouse button while moving cursor). Multiplayer support. Each player can have only one priority zone (new replaces an old one, no creep selection removes old one).
+    - Alt-selecting by creepmeter allows player to prioritize areas of creep to clear (Alt-selecting is holding Shift and left mouse button while moving cursor).
+      Multiplayer support. Each player can have only one priority zone (new replaces an old one, no creep selection removes old one).
   Balancing:
     - Rampant Arsenal healing and speed capsules require bio residue.
   Bugfixes:
