--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.19
+Date: 2023-03-?
+  Info:
+    - Replaced bio-processing tech dependency: now it requires Rocket Silo, because this tech is a must for space science techs (exactly
+      the game stage when pure creep mining can't give enough biomass).
+---------------------------------------------------------------------------------------------------
 Version: 1.3.18
 Date: 2023-01-28
   Major Features:
