--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,14 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.19
-Date: 2023-03-?
+Date: 2023-03-19
+  Major Features:
+    - Support for adding Warmonger mod in the middle of existing game. Creep areas are generated according to evolution level value
+      unless Rampant New Enemies - then creep thumbprint corresponds to type and tier of biters (like new enemies in anticipated Rampant ver3.2).
   Info:
     - Replaced bio-processing tech dependency: now it requires Rocket Silo, because this tech is a must for space science techs (exactly
       the game stage when pure creep mining can't give enough biomass).
+    - Tanks terrain-related speed slow down is halved to make it a preferred transport when crossing creep areas. Done for vanilla and RampantArsenal tanks.
+    - Flying text hints added for creep miners finishing collecting creep.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.18
 Date: 2023-01-28
