--- a/changelog.txt
+++ b/changelog.txt
@@ -3,10 +3,11 @@ Version: 1.3.20
 Date: 2023-04-11
   Minor Features:
     - Eco-friendship option for biters to revive trees they destroy. Why should they kill trees on their own planet even when path is blocked?
-      Especially useful when playing with Rampant purple cloud on - nests are covered by original trees.
+      Especially useful when playing with Rampant purple cloud on - nests are covered by original trees (moved a little if required). Player is the only evil on the planet.
     - Support for "Restrictions on Artificial Tiles" mod.
   Bugfixes:
     - Regress in ver. 1.3.18. Old mod gamedata was not deleted correctly. Obsolete data will be purged once on map load. Next gamesave will be smaller.
+    - Missing creep type-2 tooltip locale fix.
   Info:
     - Rampant 3.2.0+ set in optional dependencies as it was finally released with support for Warmonger1.3.17 creep deployment logics. If you need to correct existing game:
       collect all free creep areas, process all biomass and bioresidue into military packs and poison capsules (or into other items), then make a gamesave, turn off Warmonger,
