--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.21
+Date: 2023-06-11
+  Bugfixes:
+    - Critical error for newly installed mine creepers.
+    - Biolab had improper modules support and incorrect pipes&fluids storage scheme.
+  Balancing:
+    - Biolab recipes are slightly tuned.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.20
 Date: 2023-04-11
   Minor Features:
