--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.24
+Date: 2023-08-?
+  Bugfixes:
+    - Processing disabled RA's options.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.23
 Date: 2023-07-09
   Bugfixes:
