--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 2025-09-12
+  Major Features:
+    - Factorio2.0 compatibility. Need to fix creep tiles pictures issue.
+    - Corrosion is removed. New damage system under consideration. Strike back counteraction works.
+    - Ecomode of trees reviving is temporary down. Is it worth it without Rampant?
+    - Creep processors and biolab removed. Need new way to remove creep and get some products (or not)
+  Info:
+    - Old games 1.1 migration not implemented.
+    - Alpha version.
+    - Creep is formed only on Nauvis. Maybe Gleba should get it too... no dlc to check and feel.
+    - Rampant 3.2.0+ is in dead state. Considering focus on noRampant playthrough now.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.24
 Date: 2023-08-?
   Bugfixes:
