--- a/changelog.txt
+++ b/changelog.txt
@@ -9,7 +9,7 @@ Date: 2025-09-12
   Info:
     - Old games 1.1 migration not implemented.
     - Alpha version.
-    - Creep is formed only on Nauvis. Maybe Gleba should get it too... no dlc to check and feel.
+    - Creep is formed only on Nauvis.
     - Rampant 3.2.0+ is in dead state. Considering focus on noRampant playthrough now.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.24
